--- a/src/styles/Detail.scss
+++ b/src/styles/Detail.scss
@@ -1,9 +1,60 @@
+@mixin padding02 {
+  padding: 0.5rem 1rem;
+}
+
 .detail {
+  margin: 3rem;
   width: 100%;
   display: flex;
   flex-direction: row;
+  border: 1px solid white;
+  @include padding02;
 }
 
-.poster {
+.poster,
+.description {
+  height: 100%;
   width: 50%;
+  padding: 1rem 2.5rem;
+}
+
+img {
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+small {
+  color: grey;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  font-size: 1.3rem;
+}
+
+nav {
+  border-bottom: 1px solid rgba(221, 221, 221, 0.3);
+}
+
+li {
+  width: 20%;
+  border-bottom: 3px solid red;
+  text-align: center;
+  padding: 0.3rem 0.5rem;
+  padding-bottom: 0.7rem;
+}
+
+article,
+nav {
+  margin-top: 1rem;
 }
