--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,16 +4,21 @@
   box-sizing: border-box;
 }
 
-ul,
-li {
-  list-style: none;
+body {
+  background-color: black;
+  color: white;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 1rem;
 }
 
 ul,
-li,
-p {
-  margin: 0;
-  padding: 0;
+li {
+  list-style: none;
 }
 
 a {
