--- a/src/styles/LiveChat.scss
+++ b/src/styles/LiveChat.scss
@@ -37,6 +37,7 @@ header {
 }
 
 .live-chat-modal {
+  width: 20vw;
   display: flex;
   flex-direction: column;
   color: black;
@@ -49,11 +50,18 @@ header {
   border-radius: 8px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
+  &.on {
+    animation: fadeIn 0.7s;
+  }
+
   .close {
     // width: 100%;
     cursor: pointer;
     display: flex;
     justify-content: flex-end;
+    &.off {
+      animation: fadeIn 0.7s;
+    }
   }
 }
 
@@ -68,19 +76,84 @@ input {
 }
 
 .live-chat-body {
+  height: 50vh;
   background-color: rgba(231, 231, 231, 0.5);
-  padding: 1rem 0;
+  padding-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-ul {
+.chat-list {
+  display: flex;
+  flex-direction: column;
   padding: 0.5 rem 1rem;
+  overflow-y: scroll;
+
+  label {
+    font-weight: 600;
+  }
+
+  .chat {
+    gap: 0.3rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .chat-time {
+    display: flex;
+    justify-content: flex-end;
+    color: rgb(187, 187, 187);
+    font-size: 0.8rem;
+  }
+
+  .chat-content {
+    padding: 0.5rem;
+    background-color: beige;
+  }
 }
 
 form {
   background-color: white;
   padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  input {
+    padding: 0.5rem;
+  }
 }
 
-button {
+.chat-submit-btn {
+  font-size: 1.3rem;
   color: rgb(219, 219, 219);
+  margin-right: 0.5rem;
+  margin: 0;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+// username.jsx
+
+.username-input {
+  width: 100%;
+  padding: 0.5rem;
+  &::placeholder,
+  &:focus {
+    text-align: center;
+  }
+}
+
+.username {
+  padding-right: 1rem;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
